# fabric-api/api_specification/api-spec.yml
@@ -1,58 +1,72 @@
 openapi: '3.0.2'
 info:
-  title: XRechnung API 
+  title: Fabric API 
   version: '1.0'
 servers:
-  - url: https://api.server.test/v1
+  - url: http://localhost:1337
 
 components:
   schemas:
-      Identity:
+      newInvoice:
         type: object
         properties:
-          credentials:
-            $ref: '#/components/schemas/Credentials'
-          mspID: 
+          invoiceNo: 
             type: string
-          type:
+          sender:
             type: string
-      Credentials:
-        type: object
-        properties:
-          certificate: 
+          receiver:
             type: string
-          privateKey:
-            type: string
-      Invoice:
-        type: object
-        properties:
-          invoiceID: 
-            type: string
-          senderID:
-            type: string
-          receiverID:
-            type: string
-          file:
+          encryptedData:
             type: string
             format: byte
+          randomBytes:
+            description: 
+            type: string
+            format: byte
+      listOfInvoices:
+        type: array
+        items: 
+          type: object
+          properties:
+            Key: 
+              type: string
+            Record: 
+              $ref: '#/components/schemas/invoice' 
+      invoice:
+        type: object
+        properties:
+          processor: 
+            type: string
+          receiver:
+            type: string
+          sender:
+            type: string
+          status:
+            type: string
+      invoiceStatus:
+        type: object
+        properties:
+          status:
+            type: string
   securitySchemes:
     basicAuth:
       type: http
       scheme: basic
 
 paths:
-  /identity:
-    post:
-      description: get a new valid identity
-      responses:
-        '200':
-          description: OK
-  /invoices:
+  /invoices/list:
     get:
       description: get all invoices for the account  
       responses:
         '200':
           description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/listOfInvoices' 
+        '400':
+          description: Processing error
+  /invoices/new:        
     post:
       description: add an invoice to the ledger
       requestBody:
@@ -60,45 +74,65 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Identity' 
+              $ref: '#/components/schemas/newInvoice' 
       responses:
         '200':
           description: OK
+        '400':
+          description: Processing error
 
-  /invoice/{invoiceID}:
+  /invoice/{invoiceId}:
     get:
       description: get an invoice
       parameters:
         - in: path
-          name: invoiceID
+          name: invoiceId
           schema:
             type: string
-            format: uuid
           required: true
           description: unique ID of an invoice
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/invoice' 
+    post: 
+      description: update an invoice
+      parameters:
+        - in: path
+          name: invoiceId
+          schema:
+            type: string
+          required: true
+          description: unique ID of an invoice  
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Identity'
+              $ref: '#/components/schemas/invoiceStatus'
       responses:
         '200':
           description: OK
+        '400':
+          description: Processing error
 
     delete:
       description: delete an invoice
       parameters:
         - in: path
-          name: invoiceID
+          name: invoiceId
           schema:
             type: string
-            format: uuid
           required: true
-          description: unique ID of an invoice
+          description: unique ID of an invoice  
       responses:
         '200':
           description: OK
+        '400':
+          description: Processing error
 
 security:
   - basicAuth: []
